waybar/style.css
/* @import "mocha.css"; */
@define-color text rgb(220, 220, 220);
@define-color texthi rgb(250, 250, 250);
@define-color base rgb(30, 30, 30);
@define-color button rgb(50, 50, 50);
@define-color buttonactive rgb(80, 80, 80);

* {
  font-family: Inter, "Adwaita Sans";
  font-size: 14px;
  min-height: 0;
}

#waybar {
  background: transparent;
  color: @text;
  margin: 0 5px;
}

#workspaces {
  border-radius: 1rem;
  margin: 0 5px;
  background-color: @base;
  margin-left: 1rem;
}

#workspaces button {
  /* color: @lavender; */
  background-color: @button;
  color: @text;
  border-radius: 1rem;
  padding: 0.4rem;
}

#workspaces button.active {
  /* color: @sky; */
  color: @texthi;
  /* background-color: @surface0; */
  background-color: @buttonactive;
  border-radius: 1rem;
}

#workspaces button.urgent {
  color: @red;
}

#workspaces button:hover {
  /* color: @sapphire; */
  color: @base;
  border-radius: 1rem;
}

#window {
	border-radius: 1rem;
	margin: 0 5px;
	padding: 5px 1rem;
	background-color: @base;
}

#custom-music,
#tray,
#backlight,
#clock,
#cpu,
#memory,
#battery,
#pulseaudio,
#custom-lock,
#custom-power {
  background-color: @base;
  padding: 0.5rem 1rem;
  /* margin: 5px 0; */
}

#network {
  font-family: "Adwaita Mono";
}

#clock {
  /* color: @blue; */
  color: @text;
  border-radius: 0px 1rem 1rem 0px;
  margin-right: 1rem;
}

#battery {
  /* color: @green; */
  color: @text;
}

#battery.charging {
  /* color: @green; */
  color: @text;
}

#battery.warning:not(.charging) {
  color: @red;
}

#backlight {
  /* color: @yellow; */
  color: @text;
}

#backlight, #battery {
    border-radius: 0;
}

#pulseaudio {
  /* color: @maroon; */
  color: @text;
  border-radius: 1rem 0px 0px 1rem;
  margin-left: 1rem;
}

#custom-music {
  /* color: @mauve; */
  color: @text;
  border-radius: 1rem;
}

#custom-lock {
  border-radius: 1rem 0px 0px 1rem;
  /* color: @lavender; */
  color: @text;
}

#custom-power {
  margin-right: 1rem;
  border-radius: 0px 1rem 1rem 0px;
  /* color: @red; */
  color: @text;
}

#tray {
  margin-right: 1rem;
  border-radius: 1rem;
}

